examples/type_system/failing/46_duplicate_main_function.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E410: only one top-level main function is allowed.

fn main() {
    1
}

fn main() {
    2
}
